# Bot_V2

./: README.md  config.py  main.py  pyproject.toml  pytest.ini
data/: employee.json  employee.txt
src/: functions.py
tests/: test_employee.json  test_functions.py
