[tool.poetry]
name = "bot-v2"
version = "0.1.0"
description = ""
authors = ["andrey-trasov <159887936+andrey-trasov@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pytelegrambotapi = "^4.18.0"
telebot = "^0.0.5"
pytest = "^8.2.0"
pytest-cov = "^5.0.0"
mock = "^5.1.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
